cluster-management/developer-rbac.yaml
# RBAC for Website Developers
# Can only manage NGINX Website, but not Ingress/ArgoCD
---
apiVersion: v1
kind: Namespace
metadata:
  name: website-dev
  labels:
    team: frontend
